--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Fаke РayРal Generator</title>
+    <title>Send payment to </title>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -63,8 +63,8 @@ text-transform: capitalize;
 </style>
 
 <body>
-   <img src="https://image.flaticon.com/icons/png/512/61/61513.png" alt="paypal Wallpaper">
-   <p>Fаke РayРal Generator</p>
+   <img src="https://image.flaticon.com/icons/png/512/61/61513.png" alt="">
+   <p>Send payment to </p>
 <br>
 <br>
 <br>
@@ -81,7 +81,7 @@ text-transform: capitalize;
       <td></td>
    </tr>
    <tr>
-      <td><input type="email" id="email" required class="form-control " placeholder="example@service.com"></td>
+      <td><input type="email" id="email" required class="form-control " placeholder=""></td>
       <td></td>
       <td></td>
    </tr>
