--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ text-transform: capitalize;
       <td></td>
    </tr>
    <tr>
-      <td><input type="email" id="email" required class="form-control " placeholder="example@service.com"></td>
+      <td><input type="email" id="email" required class="form-control " placeholder="Name,@Username,email, or number"></td>
       <td></td>
       <td></td>
    </tr>
