--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ text-transform: capitalize;
 </style>
 
 <body>
-   <img src="https://image.flaticon.com/icons/png/512/61/61513.png" alt="paypal Wallpaper">
-   <p>Fаke РayРal Generator</p>
+   <img src="https://wallpapers.com/images/hd/white-and-light-blue-paypal-lce3h4c5iqbcl4xb.jpg">
+   <p>Send payment to</p>
 <br>
 <br>
 <br>
@@ -72,7 +72,7 @@ text-transform: capitalize;
 <br>
 <table border="0" cellpadding="10" cellspacing="1" width="50%">
    <tr>
-     <td style="height:50px" > <input type="text" id="price" required class="form-control " placeholder="00.00"></td>
+     <td style="height:50px" > <input type="text" id="price" required class="form-control " placeholder="$00.00"></td>
      <td width="100"> <select class="form-control " id="category">
                     <option value="eur">EUR</option>
                     <option value="usd">USD</option>
@@ -81,12 +81,12 @@ text-transform: capitalize;
       <td></td>
    </tr>
    <tr>
-      <td><input type="email" id="email" required class="form-control " placeholder="example@service.com"></td>
+      <td><input type="email" id="email" required class="form-control " placeholder="Name,@username"></td>
       <td></td>
       <td></td>
    </tr>
    <tr>
-     <td align="center"> <button type="button" onclick="paypalProofGen()" class="btn btn-primary">Generate</button></td>
+     <td align="center"> <button type="button" onclick="paypalProofGen()" class="btn btn-primary">Send</button></td>
    </tr>
 </table>
 </html>
