--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	 }
     
     html,body {
-	background-image: url("https://www.teahub.io/photos/full/37-378593_sunset-sky-photos-high-resolution-sunset-sky-background.jpg");
+	background-image: url("https://wallpapers.com/images/hd/white-and-light-blue-paypal-lce3h4c5iqbcl4xb.jpg");
 	height: 100%;
         width: 100%;
         height: 100%;
@@ -63,7 +63,7 @@ text-transform: capitalize;
 </style>
 
 <body>
-   <img src="https://wallpapers.com/images/hd/white-and-light-blue-paypal-lce3h4c5iqbcl4xb.jpg">
+   <img src="">
    <p>Send payment to</p>
 <br>
 <br>
@@ -81,7 +81,7 @@ text-transform: capitalize;
       <td></td>
    </tr>
    <tr>
-      <td><input type="email" id="email" required class="form-control " placeholder="Name,@username"></td>
+      <td><input type="email" id="email" required class="form-control " placeholder="Name,@username,email or number"></td>
       <td></td>
       <td></td>
    </tr>
